k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-app
  namespace: mustage
  labels:
    app: nest-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-app
  template:
    metadata:
      labels:
        app: nest-app
    spec:
      containers:
        - name: app
          image: ghcr.io/mozyonee/devops-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
