k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: mustage
spec:
  selector:
    app: nest-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
