k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: mustage
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
